Finally fixing CSS to suck less on mobile.

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@ body {
 	line-height: 1.5em;
 	margin: 2em auto;
 	max-width: 40em;
+	width: 95%;
 }
 
 table, td {
